# iris_cork

./: .gitignore  .gitmodules  README.md  depth-0.npy  depth-1.npy  depth-2.npy  load.py  real.txt.scene  rgb-0.npy  rgb-1.npy  scenes.txt.scene  simulation_readme  test.py  wall
aruco/: aruco_board.py
camera/: results.txt  rgb_A00366A05401108A.yaml  rgb_Astra_Orbbec.yaml
classification/xtremecork-vision/: requirements.txt
classification/xtremecork-vision/src/: cnn.py  createDataset.py
classification/xtremecork-vision/src/CorkClassifier/src/: demo.py
cpp/: Makefile  test.cpp
firstShots/: depth-1.npy  rgb-1.npy
pcl/openni_grabber/: CMakeLists.txt  openni_grabber.cpp
pcl_tests/: CMakeLists.txt  big_segment.pcd  test.cpp
pcl_tests/Test1/: test.cpp
pcl_tests/Test2/: CMakeLists.txt  test.cpp
pcl_tests/Test3/: test.cpp
pcl_tests/Test4/: CMakeLists.txt  test.cpp
python/: capture.py  load.py  npytomat.py  requirements.txt
python/firstShots/: depth-0.npy  rgb-0.npy  rgb-2.npy
python/secondShots/: depth-0.npy  depth-1.npy  rgb-0.npy  rgb-1.npy
ros_ws/: depthout0.ext  out.ext
ros_ws/img/: depth1.ext  depth_registered.ext  pins_nolight.ext  rgb_registered_pair.ext
ros_ws/src/aruco_hand_eye/examples/: kinect.launch
ros_ws/src/aruco_hand_eye/launch/: aruco_hand_eye.launch
ros_ws/src/aruco_ros/aruco_ros/launch/: single.launch
ros_ws/src/cork_classifier/: CMakeLists.txt  package.xml  requirements.txt  setup.py
ros_ws/src/cork_classifier/img/: dataset.py
ros_ws/src/cork_classifier/src/: Classifier.py  classifier_node.py
ros_ws/src/cork_classifier/srv/: ClassifyCork.srv
ros_ws/src/cork_iris/: CMakeLists.txt  package.xml
ros_ws/src/cork_iris/actionlists/: box_caljob.csv  default_caljob.csv  roller_caljob.csv
ros_ws/src/cork_iris/cfg/: PCLCork.cfg  PCLPoints.cfg
ros_ws/src/cork_iris/config/: test.yaml
ros_ws/src/cork_iris/launch/: calibration_launch.launch  caljob_create.launch  global_live.launch  global_sim.launch  handeye_calibrate.launch  handeye_publish.launch  kinect_calibration_service.launch  kinect_launch.launch  kinect_transform.launch  pcl_cork.launch  pcl_points.launch  robot_simulation.launch  scene_launch.launch  target_tf.launch
ros_ws/src/cork_iris/msg/: ArmCommand.msg
ros_ws/src/cork_iris/src/: ArmControl.py  Calibration.py  DepthParser.cpp  DepthParser.h  HelperFunctions.py  ImageParser.cpp  ImageParser.h  ImageParsing.cpp  ImageParsing.h  arm_cmd_sender.py  arm_control.py  arm_controller.py  bag_time_sync.py  box.cpp  box.h  caljobquickfix.py  capture.cpp  cork_iris.cpp  cork_iris.h  freedrive.py  image.py  img.ext  load.cpp  main.cpp  pcl_cork.cpp  pcl_functions.cpp  pcl_functions.h  pcl_points.cpp  pcl_test.cpp  quickfixesbro.py  ros_capture.cpp  setup_scene.py
ros_ws/src/cork_iris/srv/: ControlArm.srv
ros_ws/src/cork_iris/yaml/: checkerboard7x9_target.yaml  easy_handeye_eye_on_base.yaml  kinect_camera_def.yaml  positions.yaml  results.launch  roller_positions.yaml  ur10_kinect_caljob.yaml  ur10_kinect_caljob_jointfixed.yaml
ros_ws/src/industrial_calibration-melodic-devel/caljob_creator/src/: main.cpp
ros_ws/src/iris_cork/: CMakeLists.txt  package.xml
ros_ws/src/iris_cork/actionlists/: box_caljob.csv  roller_caljob.csv
ros_ws/src/iris_cork/cfg/: PCLCork.cfg
ros_ws/src/iris_cork/launch/: camera_launch.launch  global_live.launch  global_sim.launch  handeye_calibrate.launch  iris_cork.launch  iris_cork.rviz
ros_ws/src/iris_cork/msg/: CorkInfo.msg
ros_ws/src/iris_cork/src/: Calibration.py  HelperFunctions.py  box.cpp  box.h  calibrate.py  calibration.py  cork_iris.cpp  cork_iris.h  freedrive.py  grab_cork.py  helpers.py  main.cpp  model.py  pcl_functions.cpp  pcl_functions.h  pm_calibration.py  pm_poses.cpp  scene.py  setup_scene.py  test_scene.cpp
ros_ws/src/iris_cork/urdf/: object.urdf
ros_ws/src/iris_cork/yaml/: box_positions.yaml  easy_handeye_eye_on_base.yaml  roller_positions.yaml
ros_ws/src/iris_ur10e-master/ur10_e_moveit_config/launch/: move_group.launch  moveit.rviz  stomp_planning_pipeline.launch.xml
ros_ws/src/iris_ur10e-master/ur_e_description/urdf/: aruco.urdf.xacro  target.urdf  ur10e_joint_limited_robot.urdf.xacro
ros_ws/src/iris_ur10e/launch/: live.launch  sim.launch  ur10e.launch
ros_ws/src/iris_ur10e/ur10_e_moveit_config/config/: stomp_planning.yaml
ros_ws/src/iris_ur10e/ur10_e_moveit_config/launch/: moveit.rviz
ros_ws/src/iris_ur10e/ur_e_description/urdf/: charuco.urdf.xacro  ur10e_joint_limited_robot.urdf.xacro
ros_ws/src/ros_astra_camera-master/launch/: astra.launch
ros_ws/src/ros_astra_camera-master/launch/includes/: astra_frames.launch
ros_ws/src/universal_robot/ur10_e_moveit_config/launch/: moveit.rviz
ros_ws/src/universal_robot/ur_driver/: freedrive.py
ros_ws/src/universal_robot/ur_e_gazebo/controller/: arm_controller_ur10e.yaml
ros_ws/src/universal_robot/ur_e_gazebo/launch/: ur10e.launch
ros_ws/src/ur_modern_driver/launch/: ur10e_bringup_joint_limited.launch  ur_common.launch
scenes/: scenes.scene
xtremecork-vision-master/: README.md
xtremecork-vision-master/src/: capture.py  cnn.py  cnn_script.py  createDataset.py  evaluateCNN.py
xtremecork-vision/src/: croppingTest.py
xtremecork-vision/src/CorkClassifier/: requirements.txt
xtremecork-vision/src/CorkClassifier/res/models/: conv-32-drop25-dense-128-drop50-64-drop50-1572285048.h5.REMOVED.git-id
xtremecork-vision/src/CorkClassifier/src/: Classifier.py  demo.py
(+6 files in other folders)
